@@ -1,3 +1,5 @@
+- Refactor: Move and replace ITreasuryBridgeAPI#getAllAcademicTreasuryEventsList to AcademicTreasuryEvent [#qubIT-Fenix-6552]
+
 12.14.0 (04-12-2025)
 - Refactor: Move and replace ITreasuryBridgeAPI#createSaftDefaultPhysicalAddress to PersonCustomer [#qubIT-Fenix-6552]
 
